--- a/Aspire.Host/Properties/launchSettings.json
+++ b/Aspire.Host/Properties/launchSettings.json
@@ -1,23 +1,23 @@
 {
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "https": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:17018;http://localhost:15056",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "DOTNET_ENVIRONMENT": "Development",
-        "ASPIRE_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:21132",
-        "ASPIRE_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22220"
-      }
-    },
+    //"https": {
+    //  "commandName": "Project",
+    //  "dotnetRunMessages": true,
+    //  "launchBrowser": true,
+    //  "applicationUrl": "https://localhost:17018;http://localhost:15056",
+    //  "environmentVariables": {
+    //    "ASPNETCORE_ENVIRONMENT": "Development",
+    //    "DOTNET_ENVIRONMENT": "Development",
+    //    "ASPIRE_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:21132",
+    //    "ASPIRE_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22220"
+    //  }
+    //},
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:15056",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
