open telemetry has been added + logging pipeline behavior has been adjusted

--- a/Posts/Posts.Api/appsettings.Development.json
+++ b/Posts/Posts.Api/appsettings.Development.json
@@ -6,9 +6,12 @@
       { "Name": "Console" },
       {
         "Name": "Seq",
-        "Args": {  "serverUrl": "http://localhost:5341" }
+        "Args": { "serverUrl": "http://localhost:5341" }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "PostService"
+    }
   }
 }
