--- a/Posts/Posts.Api/Posts.Api.csproj
+++ b/Posts/Posts.Api/Posts.Api.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Aspire.ServiceDefaults\Aspire.ServiceDefaults.csproj" />
     <ProjectReference Include="..\Posts.Features\Posts.Features.csproj" />
     <ProjectReference Include="..\Posts.Infrastructure\Posts.Infrastructure.csproj" />
   </ItemGroup>
