--- a/Posts/Posts.Api/appsettings.Development.json
+++ b/Posts/Posts.Api/appsettings.Development.json
@@ -9,9 +9,10 @@
         "Args": { "serverUrl": "http://localhost:5341" }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId", "WithSpan" ],
     "Properties": {
       "Application": "PostService"
     }
-  }
+  },
+  //"OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4317"// TODO ADD AFTER. Its not needed while using Aspire
 }
