--- a/Aspire.Host/Aspire.Host.csproj
+++ b/Aspire.Host/Aspire.Host.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="9.3.1" />
+    <PackageReference Include="Aspire.Hosting.Kafka" Version="9.4.2" />
     <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="9.4.2" />
     <PackageReference Include="Aspire.Hosting.Redis" Version="9.4.2" />
     <PackageReference Include="Aspire.Hosting.Seq" Version="9.4.2" />
