messagin has been implemented + fixed dependencies. Now Application doesnt depend on Infrastructure, but infrastructure depends on Applicatuion layer

--- a/Posts/Posts.Infrastructure/Posts.Infrastructure.csproj
+++ b/Posts/Posts.Infrastructure/Posts.Infrastructure.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Posts.Domain\Posts.Domain.csproj" />
+    <ProjectReference Include="..\Posts.Features\Posts.Features.csproj" />
   </ItemGroup>
 
 </Project>
