--- a/Posts/Posts.Features/Posts.Features.csproj
+++ b/Posts/Posts.Features/Posts.Features.csproj
@@ -18,12 +18,12 @@
 	  <PackageReference Include="FluentValidation" Version="12.0.0" />
 	  <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
 	  <PackageReference Include="MediatR" Version="13.0.0" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\Shared\Common\Common.csproj" />
 		<ProjectReference Include="..\Posts.Domain\Posts.Domain.csproj" />
-		<ProjectReference Include="..\Posts.Infrastructure\Posts.Infrastructure.csproj" />
 	</ItemGroup>
 
 </Project>
