--- a/Aspire.Host/Aspire.Host.csproj
+++ b/Aspire.Host/Aspire.Host.csproj
@@ -1,29 +1,26 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <Sdk Name="Aspire.AppHost.Sdk" Version="9.3.1" />
+	<Sdk Name="Aspire.AppHost.Sdk" Version="9.4.2" />
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <UserSecretsId>5f028762-82a7-4918-afab-a609bdc73003</UserSecretsId>
-  </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.3.1" />
-    <PackageReference Include="Aspire.Hosting.Kafka" Version="9.4.2" />
-    <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="9.4.2" />
-    <PackageReference Include="Aspire.Hosting.Redis" Version="9.4.2" />
-    <PackageReference Include="Aspire.Hosting.Seq" Version="9.4.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net9.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<UserSecretsId>5f028762-82a7-4918-afab-a609bdc73003</UserSecretsId>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Posts\Posts.Api\Posts.Api.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Aspire.Hosting.AppHost" />
+		<PackageReference Include="Aspire.Hosting.Kafka" />
+		<PackageReference Include="Aspire.Hosting.PostgreSQL" />
+		<PackageReference Include="Aspire.Hosting.Redis"  />
+		<PackageReference Include="Aspire.Hosting.Seq"/>
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\Posts\Posts.Api\Posts.Api.csproj" />
+	</ItemGroup>
 
 </Project>
