--- a/Posts/Posts.Features/Posts.Features.csproj
+++ b/Posts/Posts.Features/Posts.Features.csproj
@@ -14,11 +14,11 @@
 
 
 	<ItemGroup>
-	  <PackageReference Include="ErrorOr" Version="2.0.1" />
-	  <PackageReference Include="FluentValidation" Version="12.0.0" />
-	  <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
-	  <PackageReference Include="MediatR" Version="13.0.0" />
-	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
+		<PackageReference Include="ErrorOr"  />
+		<PackageReference Include="FluentValidation" />
+		<PackageReference Include="FluentValidation.DependencyInjectionExtensions"  />
+		<PackageReference Include="MediatR"  />
+		<PackageReference Include="Microsoft.EntityFrameworkCore"  />
 	</ItemGroup>
 
 	<ItemGroup>
