--- a/Shared/Common/Common.csproj
+++ b/Shared/Common/Common.csproj
@@ -12,10 +12,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="ErrorOr" Version="2.0.1" />
-		<PackageReference Include="FluentValidation" Version="12.0.0" />
-		<PackageReference Include="MediatR" Version="13.0.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
+		<PackageReference Include="ErrorOr"/>
+		<PackageReference Include="FluentValidation" />
+		<PackageReference Include="MediatR"  />
 	</ItemGroup>
 
 </Project>
