--- a/Posts/Posts.Api/Posts.Api.csproj
+++ b/Posts/Posts.Api/Posts.Api.csproj
@@ -7,26 +7,26 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.OpenApi"  />
+		<PackageReference Include="Microsoft.AspNetCore.OpenApi" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Serilog"  />
-		<PackageReference Include="Serilog.Enrichers.Environment"  />
-		<PackageReference Include="Serilog.Enrichers.Span"  />
+		<PackageReference Include="Serilog" />
+		<PackageReference Include="Serilog.Enrichers.Environment" />
+		<PackageReference Include="Serilog.Enrichers.Span" />
 		<PackageReference Include="Serilog.Enrichers.Thread" />
-		<PackageReference Include="Serilog.Extensions.Hosting"  />
-		<PackageReference Include="Serilog.Extensions.Logging"  />
-		<PackageReference Include="Serilog.Settings.Configuration"  />
-		<PackageReference Include="Serilog.Sinks.Console"  />
-		<PackageReference Include="Serilog.Sinks.Seq"  />
+		<PackageReference Include="Serilog.Extensions.Hosting" />
+		<PackageReference Include="Serilog.Extensions.Logging" />
+		<PackageReference Include="Serilog.Settings.Configuration" />
+		<PackageReference Include="Serilog.Sinks.Console" />
+		<PackageReference Include="Serilog.Sinks.Seq" />
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\Aspire.ServiceDefaults\Aspire.ServiceDefaults.csproj" />
-		<ProjectReference Include="..\Posts.Features\Posts.Features.csproj" />
+		<ProjectReference Include="..\..\Shared\Shared.Api\Shared.Api.csproj" />
 		<ProjectReference Include="..\Posts.Infrastructure\Posts.Infrastructure.csproj" />
 	</ItemGroup>
 
