--- a/Posts/Posts.Features/Posts.Features.csproj
+++ b/Posts/Posts.Features/Posts.Features.csproj
@@ -14,15 +14,11 @@
 
 
 	<ItemGroup>
-		<PackageReference Include="ErrorOr"  />
-		<PackageReference Include="FluentValidation" />
-		<PackageReference Include="FluentValidation.DependencyInjectionExtensions"  />
-		<PackageReference Include="MediatR"  />
-		<PackageReference Include="Microsoft.EntityFrameworkCore"  />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\Shared\Common\Common.csproj" />
+		<ProjectReference Include="..\..\Shared\Shared.Application\Shared.Application.csproj" />
 		<ProjectReference Include="..\Posts.Domain\Posts.Domain.csproj" />
 	</ItemGroup>
 
