--- a/Shared/Shared.Api/Shared.Api.csproj
+++ b/Shared/Shared.Api/Shared.Api.csproj
@@ -7,14 +7,18 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<!-- Correct, supported: brings in ASP.NET Core reference assemblies -->
+		<!--Correct, supported: brings in ASP.NET Core reference assemblies-->
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="ErrorOr"/>
-		<PackageReference Include="FluentValidation" />
-		<PackageReference Include="MediatR"  />
+		<PackageReference Include="ErrorOr" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Shared.Contracts\Shared.Contracts.csproj" />
+	</ItemGroup>
+	
+	
 
 </Project>
